# moa-cc-switch

./: .gitignore  README.md  pyproject.toml  result.py  run_audit.py
.github/workflows/: ci.yml
.kiro/specs/kiro-cli-integration/: .config.kiro  design.md  requirements.md  tasks.md
presets/: infolimp-audit.json
src/moa_engine/: __init__.py  agents.py  clients.py  config.py  domain.py  engine.py  presets.py  reporter.py  runner.py  verifiers.py
tests/: __init__.py  test_agents.py  test_cli_agents.py  test_clients.py  test_lru_cache.py  test_moa_engine.py  test_presets.py  test_reporter.py  test_verifiers.py
